# simple-scvi

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pyproject.toml.rej
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yaml  release.yaml  test.yaml
docs/: api.md  conf.py  contributing.md  references.bib  template_usage.md
docs/notebooks/: example.ipynb
src/simple_scvi/: __init__.py  _mymodel.py  _mymodule.py  _mypyromodel.py  _mypyromodule.py
tests/: test_basic.py
